--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- header section starts  -->
       <section class="header">
            <nav>
-               <a href="Sample.html"><img src="image/logo.png"  height="5000%"width="110%"alt="Error"></a>
+               <a href="Sample.html"><img src="logo.png"  height="5000%"width="110%"alt="Error"></a>
                <div class="navbar">
                    <ul>
                        <li><a href="index.html">HOME</a></li>
